Removing the fixed width for thumbnails on the video view page, since it was stretching the Close icon as well. We'll have to get fileimage widget to do the resizing for us.

--- a/p4a/video/browser/resources/videostyles/video.css
+++ b/p4a/video/browser/resources/videostyles/video.css
@@ -80,10 +80,6 @@
   text-align: center;
 }
 
-.hVlog img {
-    width: 200px;
-}
-
 .bottom-content-info DT,
 .bottom-content-info DD {
     float: left;
